--- a/index.html
+++ b/index.html
@@ -9,19 +9,27 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="col-md-3 pull-right" id="about-me">
-        <!--start of about me sidebar-->
-        <h2>Hannah Kinne</h2>
-        <h3>About Me</h3>
-        <img src="img/portfolio-photo.jpg" alt="photo of me" id="portfolio-photo"/>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </div>
-
+      <div class="row">
+        <div class="col-md-9">
+          <div class="jumbotron">
+            <h1>Hannah Kinne</h1>
+            <p>Future Web Developer</p>
+          </div>
+        </div>
+        <div class="col-md-3 pull-right" id="about-me">
+          <!--start of about me sidebar-->
+          <h2>Hannah Kinne</h2>
+          <h3>About Me</h3>
+          <img src="img/portfolio-photo.jpg" alt="photo of me" id="portfolio-photo"/>
+          <p>
+            <span class="intro-words">Lorem ipsum dolor</span> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <p>
+            <span class="intro-words">Lorem ipsum dolor</span> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <!--end of about me sidebar, start of the rest of the container including jumbotron-->
+    </div>
     </div>
   </body>
 </html>
