--- a/index.html
+++ b/index.html
@@ -7,17 +7,39 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
   </head>
+
   <body>
     <div class="container-fluid">
+      <!--start of jumbotron-->
       <div class="row">
         <div class="col-md-9">
           <div class="jumbotron">
             <h1>Hannah Kinne</h1>
             <p>Future Web Developer</p>
           </div>
+          <!--end of Jumbotron-->
+          <div class="container-fluid main">
+            <!--beginning of rows with weekdays and page thumbnails, links, and descriptions-->
+
+            <div class="row">
+              <div class="col-md-12 day">
+                <h3 class="day-heading">Day 4</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 day">
+                <h3 class="day-heading">Day 3</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 day">
+                <h3 class="day-heading">Day 4</h3>
+              </div>
+            </div>
+          </div>
+          <!--end of main body section-->
         </div>
-        <div class="col-md-3 pull-right" id="about-me">
-          <!--start of about me sidebar-->
+        <div class="col-md-3 pull-right" id="about-me">  <!--start of about me sidebar-->
           <h2>Hannah Kinne</h2>
           <h3>About Me</h3>
           <img src="img/portfolio-photo.jpg" alt="photo of me" id="portfolio-photo"/>
@@ -27,9 +49,11 @@
           <p>
             <span class="intro-words">Lorem ipsum dolor</span> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
+            <a class="github-button" href="https://github.com/ntkme" data-style="mega" data-count-href="/ntkme/followers" data-count-api="/users/ntkme#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @ntkme on GitHub">Follow @hannah-k</a>
         </div>
-        <!--end of about me sidebar, start of the rest of the container including jumbotron-->
+        <!--end of about me sidebar, start of the rest of the container-->
     </div>
     </div>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
