add thumbnail with git-hub and gh-pages buttons and informational text about wikipedia project to the first column.

--- a/index.html
+++ b/index.html
@@ -20,20 +20,48 @@
           <!--end of Jumbotron-->
           <div class="container-fluid main">
             <!--beginning of rows with weekdays and page thumbnails, links, and descriptions-->
-
             <div class="row">
               <div class="col-md-12 day">
-                <h3 class="day-heading">Day 4</h3>
+                <h3 class="day-heading"><span class="weekday">Thursday</span> Day 4:</h3>
+                <div class="row">
+                  <div class="col-md-4">
+                    <a href="hannah-k.github.io/wiki-homepage"><img class="thumbnail wiki-thumbnail" src="img/wiki_transp.png" alt="photo of website" /></a>
+                    <div class="row">
+                      <div class="col-med-2">
+                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                          Git-Hub
+                        </button></a>
+                      </div>
+                      <div class="col-med-2">
+                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                          GH-pages
+                        </button></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                  </div>
+                  <div id="wikipedia-project" class="col-md-6">
+                    <h4>Wikipedia Project</h4>
+                    <p>This project was an atempt to recreate the homepage of Wikipedia utilizing various aspects of bootstrap including helper classes, wells, and navigation bars.</p>
+                    <p>Languages used in this project include:</p>
+                    <ul class="lang-list">
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>Bootstrap</li>
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12 day">
-                <h3 class="day-heading">Day 3</h3>
+                <h3 class="day-heading"><span class="weekday">Wednesday</span> Day 3:</h3>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12 day">
-                <h3 class="day-heading">Day 4</h3>
+                <h3 class="day-heading"><span class="weekday">Tuesday</span> Day 2:</h3>
               </div>
             </div>
           </div>
