add internal columns labeled Animal Shelter, Vegan Blog, and Band Page to the second Wednesday column.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 
   <body>
     <div class="container-fluid">
-      <!--start of jumbotron-->
       <div class="row">
         <div class="col-md-9">
+          <!--start of jumbotron-->
           <div class="jumbotron">
             <h1>Hannah Kinne</h1>
-            <p>Future Web Developer</p>
+            <h3>Future Web Developer</h3>
           </div>
           <!--end of Jumbotron-->
           <div class="container-fluid main">
             <!--beginning of rows with weekdays and page thumbnails, links, and descriptions-->
             <div class="row">
               <div class="col-md-12 day">
+                <!--beginning of first day row-->
                 <h3 class="day-heading"><span class="weekday">Thursday</span> Day 4:</h3>
                 <div class="row">
                   <div class="col-md-4">
@@ -56,11 +57,27 @@
             </div>
             <div class="row">
               <div class="col-md-12 day">
+                <!--beginning of second day row-->
                 <h3 class="day-heading"><span class="weekday">Wednesday</span> Day 3:</h3>
+                <div class="row">
+                  <div class="col-md-4 project">
+                    <h4>Animal Shelter</h4>
+                    <!--insert thumbnail and info here for first project-->
+                  </div>
+                  <div class="col-md-4 project">
+                    <h4>Vegan Blog</h4>
+                    <!--insert thumbnail and info here for second project-->
+                  </div>
+                  <div class="col-md-4 project">
+                    <h4>Band Page</h4>
+                    <!--insert thumbnail and info here for third project-->
+                  </div>
+                </div>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12 day">
+                <!--beginning of third day row-->
                 <h3 class="day-heading"><span class="weekday">Tuesday</span> Day 2:</h3>
               </div>
             </div>
