--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <div class="col-md-2">
                   </div>
                   <div id="wikipedia-project" class="col-md-6">
-                    <h4>Wikipedia Project</h4>
+                    <h4 class="day4-2">Wikipedia Project</h4>
                     <p>This project was an atempt to recreate the homepage of Wikipedia utilizing various aspects of bootstrap including helper classes, wells, and navigation bars.</p>
                     <p>Languages used in this project include:</p>
                     <ul class="lang-list">
@@ -56,21 +56,102 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12 day">
+              <div class="col-md-12">
                 <!--beginning of second day row-->
-                <h3 class="day-heading"><span class="weekday">Wednesday</span> Day 3:</h3>
+                <div class="well well-lg">
+                  <h3 class="day-heading"><span class="weekday">Wednesday</span> Day 3:</h3>
+                </div>
+
                 <div class="row">
-                  <div class="col-md-4 project">
-                    <h4>Animal Shelter</h4>
-                    <!--insert thumbnail and info here for first project-->
+                  <div class="col-md-4">
+                    <div class="panel panel-primary">
+                      <div class="panel-heading">
+                        <h4>Animal Shelter</h4>
+                      </div>
+                      <div class="panel-body">
+                        <a href="hannah-k.github.io/animal-shelter"><img class="thumbnail" src="img/cat.jpeg" alt="photo of cat" /></a>
+                        <p>
+                          This project was made in an effort create columns in CSS (without the aid of Bootstrap styling).
+                        </p>
+                        <p>Languages used in this project include:</p>
+                        <ul class="lang-list">
+                          <li>HTML</li>
+                          <li>CSS</li>
+                        </ul>
+                        <div class="row">
+                          <div class="col-med-2">
+                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                              Git-Hub
+                            </button></a>
+                          </div>
+                          <div class="col-med-2">
+                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                              GH-pages
+                            </button></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                  <div class="col-md-4 project">
-                    <h4>Vegan Blog</h4>
-                    <!--insert thumbnail and info here for second project-->
+                  <div class="col-md-4">
+                    <div class="panel panel-primary">
+                      <div class="panel-heading">
+                        <h4>Vegan Blog</h4>
+                      </div>
+                      <div class="panel-body">
+                        <a href="hannah-k.github.io/veghead"><img class="thumbnail" src="img/veghead.jpeg" alt="photo of vegetables" /></a>
+                        <p>
+                          This project was created in order to practice using CSS div and span tags for the firt time. This was also my first practice in adjusting margins.
+                        </p>
+                        <p>Languages used in this project include:</p>
+                        <ul class="lang-list">
+                          <li>HTML</li>
+                          <li>CSS</li>
+                        </ul>
+                        <div class="row">
+                          <div class="col-med-2">
+                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                              Git-Hub
+                            </button></a>
+                          </div>
+                          <div class="col-med-2">
+                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                              GH-pages
+                            </button></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                  <div class="col-md-4 project">
-                    <h4>Band Page</h4>
-                    <!--insert thumbnail and info here for third project-->
+                  <div class="col-md-4">
+                    <div class="panel panel-primary">
+                      <div class="panel-heading">
+                        <h4>Band Page</h4>
+                      </div>
+                      <div class="panel-body">
+                        <a href="hannah-k.github.io/weezer"><img class="thumbnail" src="img/weezer.jpeg" alt="photo of cat" /></a>
+                        <p>
+                          The band page seen here was an initial effor to create a page with multiple columns and wrap text around an image
+                        </p>
+                        <p>Languages used in this project include:</p>
+                        <ul class="lang-list">
+                          <li>HTML</li>
+                          <li>CSS</li>
+                        </ul>
+                        <div class="row">
+                          <div class="col-med-2">
+                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                              Git-Hub
+                            </button></a>
+                          </div>
+                          <div class="col-med-2">
+                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                              GH-pages
+                            </button></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
