--- a/index.html
+++ b/index.html
@@ -54,14 +54,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <!--beginning of second day row-->
-                <div class="well well-lg">
-                  <h3 class="day-heading"><span class="weekday">Wednesday</span> Day 3:</h3>
-                </div>
-
                 <div class="row">
                   <div class="col-md-4">
                     <div class="panel panel-primary">
@@ -160,12 +152,41 @@
               <div class="col-md-12 day">
                 <!--beginning of third day row-->
                 <h3 class="day-heading"><span class="weekday">Tuesday</span> Day 2:</h3>
+                <div class="row">
+                  <div id="tuesday-project" class="col-md-6">
+                    <h4 class="day4-2">Resort Website</h4>
+                    <p>Here, my partner and I created a small website for Doe Bay Resort. This website includes seperate pages for accommodations, activities, travel arrangements, photos, and contact information.</p>
+                    <p>Languages used in this project include:</p>
+                    <ul class="lang-list">
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul>
+                  </div>
+                  <div class="col-md-2">
+                  </div>
+                  <div class="col-md-4">
+                    <a href="hannah-k.github.io/wiki-homepage"><img class="thumbnail" src="img/orcas-island.jpeg" alt="photo of orcas island"/></a>
+                    <div class="row">
+                      <div class="col-med-2">
+                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                          Git-Hub
+                        </button></a>
+                      </div>
+                      <div class="col-med-2">
+                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                          GH-pages
+                        </button></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
           <!--end of main body section-->
-        </div>
-        <div class="col-md-3 pull-right" id="about-me">  <!--start of about me sidebar-->
+
+        <div class="col-md-3" id="about-me">
+          <!--start of about me sidebar-->
           <h2>Hannah Kinne</h2>
           <h3>About Me</h3>
           <img src="img/portfolio-photo.jpg" alt="photo of me" id="portfolio-photo"/>
@@ -178,7 +199,7 @@
             <a class="github-button" href="https://github.com/ntkme" data-style="mega" data-count-href="/ntkme/followers" data-count-api="/users/ntkme#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @ntkme on GitHub">Follow @hannah-k</a>
         </div>
         <!--end of about me sidebar, start of the rest of the container-->
-    </div>
+      </div>
     </div>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
