add a README.md.

--- a/wednesday.html
+++ b/wednesday.html
@@ -1,70 +1,15 @@
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hannah Kinne Portfolio</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <div class="col-md-12">
-      <!--beginning of second day row-->
-      <div class="well well-lg">
-        <h3><span class="weekday">Thursday</span> Day 3:</h3>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4 project">
-          <div class="panel panel-primary">
-            <div class="panel-heading">
-              <h4>Animal Shelter</h4>
-            </div>
-            <div class="panel-body">
-
-            </div>
-          <!--insert thumbnail and info here for first project-->
-          </div>
-        </div>
-        <div class="col-md-4 project">
-          <div class="panel panel-primary">
-            <div class="panel-heading">
-              <h4>Vegan Blog</h4>
-            </div>
-            <div class="panel-body">
-
-            </div>
-          <!--insert thumbnail and info here for first project-->
-          </div>
-        </div>
-        <div class="col-md-4 project">
-          <div class="panel panel-primary">
-            <div class="panel-heading">
-              <h4>Band Page</h4>
-            </div>
-            <div class="panel-body">
-
-            </div>
-          <!--insert thumbnail and info here for first project-->
-          </div>
-        </div>
-      </div>
-    </div>
-<!--wikipedia buttons set up in a row-->
-    <div class="row">
-      <div class="col-med-2">
-        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
-          Git-Hub
-        </button></a>
-      </div>
-      <div class="col-med-2">
-        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
-          GH-pages
-        </button></a>
-      </div>
-    </div>
-
-
-  </body>
-</html>
+<div class="col-md-3" id="about-me">
+  <!--start of about me sidebar-->
+<div class="sidebar">
+  <h2>Hannah Kinne</h2>
+  <h3>About Me</h3>
+  <img src="img/portfolio-photo.jpg" alt="photo of me" id="portfolio-photo"/>
+  <p>
+    <span class="intro-words">Hannah Kinne here</span> born and raised in the Pacific North West. Graduated Cum Laude at Western Washington University in 2015 with bachelor degrees in both Spanish and Linguistics. I recently moved from the beautiful Bellingham Bay to Portland in order to hone my language skills in a new way- computer programming.
+  </p>
+  <p>
+    <span class="intro-words">In my free time</span> you can find me away from a computer, biking and running around or at cooking up something tasty.
+  </p>
+    <a class="github-button" href="https://github.com/ntkme" data-style="mega" data-count-href="/ntkme/followers" data-count-api="/users/ntkme#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @ntkme on GitHub">Follow @hannah-k</a>
+</div>
