--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <title>Hannah Kinne Portfolio</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <!--<link href='//fonts.googleapis.com/css?family=/Basic' rel='stylesheet'>-->
   </head>
 
   <body>
+    <div class="nav">
+      <ul class="nav nav-pills">
+        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <li role="presentation" class="active"><a href="#">Profile</a></li>
+        <li role="presentation" class="active"><a href="#">Contact</a></li>
+      </ul>
+    </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-9">
@@ -191,10 +198,10 @@
           <h3>About Me</h3>
           <img src="img/portfolio-photo.jpg" alt="photo of me" id="portfolio-photo"/>
           <p>
-            <span class="intro-words">Lorem ipsum dolor</span> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <span class="intro-words">Hannah Kinne here</span> born and raised in the Pacific North West. Graduated Cum Laude at Western Washington University in 2015 with bachelor degrees in both Spanish and Linguistics. I recently moved from the beautiful Bellingham Bay to Portland in order to hone my language skills in a new way- computer programming.
           </p>
           <p>
-            <span class="intro-words">Lorem ipsum dolor</span> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <span class="intro-words">In my free time</span> you can find me away from a computer, biking and running around or at cooking up something tasty.
           </p>
             <a class="github-button" href="https://github.com/ntkme" data-style="mega" data-count-href="/ntkme/followers" data-count-api="/users/ntkme#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @ntkme on GitHub">Follow @hannah-k</a>
         </div>
