add working links to all github and gh-pages.

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                 <h3 class="day-heading"><span class="weekday">Thursday</span> Day 4:</h3>
                 <div class="row">
                   <div class="col-md-4">
-                    <a href="hannah-k.github.io/wiki-homepage"><img class="thumbnail wiki-thumbnail" src="img/wiki_transp.png" alt="photo of website" /></a>
+                    <a href="https://hannah-k.github.io/wiki-homepage"><img class="thumbnail wiki-thumbnail" src="img/wiki_transp.png" alt="photo of website" /></a>
                     <div class="row">
                       <div class="col-med-2">
-                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                        <a href="https://github.com/hannah-k/wiki-homepage"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                           Git-Hub
                         </button></a>
                       </div>
                       <div class="col-med-2">
-                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                        <a href="https://hannah-k.github.io/wiki-homepage"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                           GH-pages
                         </button></a>
                       </div>
@@ -68,7 +68,7 @@
                         <h4>Animal Shelter</h4>
                       </div>
                       <div class="panel-body">
-                        <a href="hannah-k.github.io/animal-shelter"><img class="thumbnail" src="img/cat.jpeg" alt="photo of cat" /></a>
+                        <a href="https://hannah-k.github.io/animal-shelter"><img class="thumbnail" src="img/cat.jpeg" alt="photo of cat" /></a>
                         <p>
                           This project was made in an effort create columns in CSS (without the aid of Bootstrap styling).
                         </p>
@@ -79,12 +79,12 @@
                         </ul>
                         <div class="row">
                           <div class="col-med-2">
-                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                            <a href="https://github.com/hannah-k/animal-shelter"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                               Git-Hub
                             </button></a>
                           </div>
                           <div class="col-med-2">
-                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                            <a href="https://hannah-k.github.io/animal-shelter"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                               GH-pages
                             </button></a>
                           </div>
@@ -98,7 +98,7 @@
                         <h4>Vegan Blog</h4>
                       </div>
                       <div class="panel-body">
-                        <a href="hannah-k.github.io/veghead"><img class="thumbnail" src="img/veghead.jpeg" alt="photo of vegetables" /></a>
+                        <a href="https://hannah-k.github.io/veghead"><img class="thumbnail" src="img/veghead.jpeg" alt="photo of vegetables" /></a>
                         <p>
                           This project was created in order to practice using CSS div and span tags for the firt time. This was also my first practice in adjusting margins.
                         </p>
@@ -109,12 +109,12 @@
                         </ul>
                         <div class="row">
                           <div class="col-med-2">
-                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                            <a href="https://github.com/hannah-k/veghead"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                               Git-Hub
                             </button></a>
                           </div>
                           <div class="col-med-2">
-                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                            <a href="https://hannah-k.github.io/veghead"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                               GH-pages
                             </button></a>
                           </div>
@@ -128,7 +128,7 @@
                         <h4>Band Page</h4>
                       </div>
                       <div class="panel-body">
-                        <a href="hannah-k.github.io/weezer"><img class="thumbnail" src="img/weezer.jpeg" alt="photo of cat" /></a>
+                        <a href="https://hannah-k.github.io/weezer"><img class="thumbnail" src="img/weezer.jpeg" alt="photo of cat" /></a>
                         <p>
                           The band page seen here was an initial effor to create a page with multiple columns and wrap text around an image
                         </p>
@@ -139,12 +139,12 @@
                         </ul>
                         <div class="row">
                           <div class="col-med-2">
-                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                            <a href="https://github.com/hannah-k/weezer"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                               Git-Hub
                             </button></a>
                           </div>
                           <div class="col-med-2">
-                            <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                            <a href="https://hannah-k.github.io/weezer"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                               GH-pages
                             </button></a>
                           </div>
@@ -172,15 +172,15 @@
                   <div class="col-md-2">
                   </div>
                   <div class="col-md-4">
-                    <a href="hannah-k.github.io/wiki-homepage"><img class="thumbnail" src="img/orcas-island.jpeg" alt="photo of orcas island"/></a>
+                    <a href="https://hannah-k.github.io/wiki-homepage"><img class="thumbnail" src="img/orcas-island.jpeg" alt="photo of orcas island"/></a>
                     <div class="row">
                       <div class="col-med-2">
-                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                        <a href="https://github.com/hannah-k/resort-website"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                           Git-Hub
                         </button></a>
                       </div>
                       <div class="col-med-2">
-                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                        <a href="https://hannah-k.github.io/wiki-homepage"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                           GH-pages
                         </button></a>
                       </div>
