--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <title>Hannah Kinne Portfolio</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <!--<link href='//fonts.googleapis.com/css?family=/Basic' rel='stylesheet'>-->
   </head>
 
   <body>
-    <div class="nav">
-      <ul class="nav nav-pills">
-        <li role="presentation" class="active"><a href="#">Home</a></li>
-        <li role="presentation" class="active"><a href="#">Profile</a></li>
-        <li role="presentation" class="active"><a href="#">Contact</a></li>
-      </ul>
-    </div>
-    <div class="container-fluid">
+  <div class="container">
+      <div class="nav">
+        <ul class="nav nav-pills">
+          <li role="presentation" class="active"><a href="#">Home</a></li>
+          <li role="presentation" class="active"><a href="#">Profile</a></li>
+          <li role="presentation" class="active"><a href="#">Contact</a></li>
+        </ul>
+      </div>
+
       <div class="row">
         <div class="col-md-9">
           <!--start of jumbotron-->
@@ -61,9 +61,17 @@
                   </div>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="well">
+                    <!--beginning of third day row-->
+                    <h3 class="day-heading"><span class="weekday">Wednesday</span> Day 3:</h3>
+                  </div>
+                </div>
+              </div>
                 <div class="row">
                   <div class="col-md-4">
-                    <div class="panel panel-primary">
+                    <div class="panel panel-primary wednesday">
                       <div class="panel-heading">
                         <h4>Animal Shelter</h4>
                       </div>
@@ -93,7 +101,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <div class="panel panel-primary">
+                    <div class="panel panel-primary wednesday">
                       <div class="panel-heading">
                         <h4>Vegan Blog</h4>
                       </div>
@@ -123,7 +131,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <div class="panel panel-primary">
+                    <div class="panel panel-primary wednesday">
                       <div class="panel-heading">
                         <h4>Band Page</h4>
                       </div>
@@ -172,7 +180,7 @@
                   <div class="col-md-2">
                   </div>
                   <div class="col-md-4">
-                    <a href="hannah-k.github.io/wiki-homepage"><img class="thumbnail" src="img/orcas-island.jpeg" alt="photo of orcas island"/></a>
+                    <a href="https://github.com/hannah-k/resort-website"><img class="thumbnail" src="img/orcas-island.jpeg" alt="photo of orcas island"/></a>
                     <div class="row">
                       <div class="col-med-2">
                         <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
@@ -180,7 +188,7 @@
                         </button></a>
                       </div>
                       <div class="col-med-2">
-                        <a href="#"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+                        <a href="https://hannah-k.github.io/resort-website"><button type="button" class="btn btn-info btn-small center-block" data-toggle="button" aria-pressed="false" autocomplete="off">
                           GH-pages
                         </button></a>
                       </div>
@@ -208,6 +216,8 @@
         <!--end of about me sidebar, start of the rest of the container-->
       </div>
     </div>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+  </div>
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
